<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.duyngo.memorygame.HomeActivity"
    android:baselineAligned="true">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:id="@+id/rulesButton"
        android:layout_gravity="bottom"
        android:textSize="36dp"
        android:layout_below="@+id/playButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="clickRules" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/playButton"
        android:layout_gravity="center_vertical"
        android:textSize="36dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="clickPlay" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcomeMsg"
        android:id="@+id/welcMsg"
        android:layout_marginTop="61dp"
        android:textSize="24dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume"
        android:id="@+id/resumeButton"
        android:layout_above="@+id/playButton"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_centerInParent="true"
        android:textSize="36dp"
        android:visibility="invisible"
        android:onClick="clickResume"
        android:nestedScrollingEnabled="false" />

</RelativeLayout>
